Fix ids, anchor jump again

--- a/app/styles/mystyles.css
+++ b/app/styles/mystyles.css
@@ -198,13 +198,13 @@ a:hover, a:focus {
     transition: font-size 300ms;
 }
 
-#where a{
+#where-container a{
     color:#000;
 }
-#where a:hover{
+#where-container a:hover{
     color:#333;
 }
-#where {
+#where-container {
     margin-top:5%;
     font-size: 4rem;
     opacity:0.7;
